fix: Prevent secondary actions focus ring clipping with padding (#4319)

--- a/src/prompt-input/styles.scss
+++ b/src/prompt-input/styles.scss
@@ -261,7 +261,7 @@ $invalid-border-offset: constants.$invalid-control-left-padding;
     }
   }
   &.with-paddings-and-actions {
-    padding-inline-end: 0;
+    padding-inline-end: awsui.$space-scaled-s;
   }
 }
 
